# multi-agent-support-system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT_READINESS.md  Dockerfile  Dockerfile.backup  Dockerfile.optimized  FRONTEND_IMPLEMENTATION_PLAN.md  Jenkinsfile  MANUAL_TESTING_GUIDE.md  PROJECT_STATUS_AND_NEXT_STEPS.md  alembic.ini  cliff.toml  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  fix_datetime_deprecations.py  multi-agent-support.code-workspace  pyproject.toml  pytest.ini  requirements.celery.txt  requirements.txt  smoke_test.py  test_e2e_comprehensive.py  test_e2e_simple.py  test_job_store_standalone.py  test_kb_search.py  test_scenarios.py  test_vllm.sh  verify_agent_registry.py
.github/ISSUE_TEMPLATE/: 01-cicd-pipeline.md  02-celery-background-processing.md  03-docker-infrastructure.md  04-monitoring-observability.md  cicd-epic.md
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  security.yml
archive/frontend-v1/: Dockerfile  README.md  auth.config.ts  commitlint.config.ts  eslint.config.mjs  jest.config.mjs  jest.setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
data/: README.md  api_articles.json  articles.json
data/kb_articles/: kb_articles.json  kb_articles_comprehensive.json  seed_articles.json
data/sql_seed/: agent_handoffs.json  conversations.json  credits.json  customer_health_events.json  customer_integrations.json  customer_segments.json  customers.json  deals.json  employees.json  invoices.json  leads.json  messages.json  payments.json  policy_rules.json  quotes.json  response_quality_checks.json  sales_activities.json  subscriptions.json  usage_events.json
deployment/: README.md
deployment/nginx/: generate-self-signed-cert.sh  nginx.conf
deployment/postgres/: postgresql.conf
deployment/prometheus/: prometheus.yml
deployment/redis/: redis.conf
deployment/scripts/: acceptance-tests.sh  backup-database.sh  blue-green-deploy.sh  clean-instance.sh  deploy.sh  health-check.sh  install-k3s.sh  migrate-database.sh  restore-database.sh  rollback.sh  setup-backup-cron.sh  setup-doppler.sh  setup-letsencrypt.sh  setup-server.sh  smoke-test.sh  status.sh  verify-knowledge-base.sh
docs/: ADMIN_API.md  AGENT_ARCHITECTURE.md  API.md  BACKGROUND_TASKS_ANALYSIS.md  DATABASE_SCHEMA_REFERENCE.md  DEPLOYMENT.md  DOCKER_CELERY_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  MIGRATIONS.md  MODAL_SETUP.md
docs/context/: architecture.md  caching.md  monitoring.md  providers.md  troubleshooting.md
docs/infrastructure/: DOPPLER_SETUP.md
docs/monitoring/: discord-monitoring.md
docs/vllm/: MODAL.md  VASTAI.md  VLLM_CURL_COMMANDS.md
frontend/: .env.example  .env.local.example  .gitattributes  .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc  Dockerfile  PHASE_2.5_SUMMARY.md  PHASE_2_COMMITS.md  README.md  TESTING.md  auth.config.ts  auth.ts  commitlint.config.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  lighthouserc.json  middleware.ts  next.config.ts  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/.husky/: commit-msg
frontend/__mocks__/: rehype-highlight.js
frontend/__tests__/: setup.test.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: README.md  command-palette.tsx  empty-state.tsx  error-boundary-advanced.tsx  error-boundary.tsx  index.ts  keyboard-shortcuts-overlay.tsx  loading-states.tsx  performance-monitor.tsx  sentiment-analysis.tsx  smart-search.tsx  theme-provider.tsx  theme-toggle.tsx  virtual-list.tsx
frontend/e2e/: example.spec.ts  home.spec.ts
frontend/hooks/: useVoice.ts
frontend/lib/: README.md  api-client.ts  config.ts  utils.ts
frontend/prisma/: schema.prisma
frontend/stores/: chat-store.ts
frontend/types/: api.d.ts  global.d.ts  index.ts  next-auth.d.ts
grafana/dashboards/: system_overview.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml
migrations/: env.py
migrations/versions/: 20250111_complete_schema.py  20250511_add_audit_fields.py  20251114120000_complete_schema_expansion.py  20251116000000_tier_3_operational_excellence.py  20251116120000_add_authentication_system.py  20251117000000_tier_4_advanced_capabilities.py  20251118000000_add_missing_tier_3_and_kb_tables.py  20251118000001_fix_consent_records_schema.py  20251118000002_fix_qa_table_schemas.py  552eac7fda0c_initial_schema_customers_conversations_.py  efaa6e584823_initial_complete_schema_with_audit.py  f85f82502d01_add_performance_indexes_and_constraints.py
scripts/: __init__.py  check_budget.py  cleanup_orphaned_gpus.py  embed_articles.py  fix_migration_state.py  get-ssl.sh  init_knowledge_base.py  invalidate_cache.py  load_kb.py  load_sql_data.py  test_agent_migration.py  test_migrations.py
scripts/data/: __init__.py  init_knowledge_base.py  seed_database.py
scripts/deployment/: __init__.py
scripts/maintenance/: __init__.py  fix_all_tests.py  fix_missing_tables.py
scripts/operations/: __init__.py  benchmark_providers.py  generate_sentry_performance_load.py  warm_cache.py
scripts/validation/: __init__.py  test_kb_search.py
src/: conversation_manager.py  demo_multiagent.py  graph.py  knowledge_base.py  simple_agent.py  state.py  vector_store.py
src/agents/: __init__.py  api.py  base.py  billing.py  escalation.py  loader.py  router.py  router_new.py  technical.py  usage.py
src/api/: __init__.py  dependencies.py  error_handlers.py  main.py  models.py  storage.py
src/celery/: __init__.py  celery_app.py
src/core/: __init__.py  config.py  config_validator.py  errors.py  events.py  result.py  specifications.py
src/database/: __init__.py  base.py  connection.py  health_check.py  models.py  unit_of_work.py
src/llm/: README.md  client.py  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_api_client.py  test_repositories.py
(+860 files in other folders)
