# =============================================================================
# Multi-Agent Support System - Python Project Configuration
# =============================================================================

[project]
name = "multi-agent-support-system"
version = "1.0.0"
description = "Enterprise-grade multi-agent AI customer support system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "ThatAgents Team" }
]
keywords = ["ai", "agents", "customer-support", "langchain", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://thatagentsproject.com"
Documentation = "https://github.com/OthmanMohammad/multi-agent-support-system/docs"
Repository = "https://github.com/OthmanMohammad/multi-agent-support-system"

# =============================================================================
# Ruff Configuration (Linter & Formatter)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "alembic",
]

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults (FastAPI Depends)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "ARG001",  # Unused function argument (common in FastAPI)
    "ARG002",  # Unused method argument
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLW0603", # Using global statement (acceptable in certain patterns)
    "PLC0415", # Import not at top of file (sometimes needed for circular imports)
    "E402",    # Module level import not at top of file
    "SIM102",  # Nested if statements (sometimes more readable)
    "SIM108",  # Use ternary operator (not always more readable)
    "SIM116",  # Use dictionary instead of if-else (not always applicable)
    "RUF001",  # String contains ambiguous character (false positives with unicode)
    "RUF002",  # Docstring contains ambiguous character
    "RUF003",  # Comment contains ambiguous character
    "RUF034",  # Useless if-else condition (sometimes intentional for clarity)
    "ERA001",  # Commented-out code (sometimes intentional for documentation)
    "RUF012",  # Mutable class attributes without ClassVar (too strict for dataclasses)
    "B024",    # Abstract base class without abstract methods
    "SIM103",  # Return condition directly (not always more readable)
    "SIM105",  # Use contextlib.suppress (not always preferred)
    "PTH123",  # Use pathlib.Path.open() (os.open still valid)
    "PTH118",  # Use pathlib.Path.joinpath() (os.path.join still valid)
    "PTH110",  # Use pathlib.Path.exists() (os.path.exists still valid)
    "PTH208",  # Use pathlib (os module still valid)
    "RUF005",  # Consider unpacking instead of concatenation
    "RUF006",  # Store a reference to the return value of asyncio.create_task
    "RUF059",  # Unused unpacked variable
    "PLW2901", # Outer loop variable overwritten by inner assignment
    "PLW1641", # Object does not implement __hash__
    "PLC0206", # Extracting value from dictionary without .items()
    "B018",    # Found useless expression
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "ARG",     # Unused arguments common in fixtures
    "PLR2004", # Magic values OK in tests
]
"src/api/routes/*.py" = [
    "B008",    # Depends() calls in defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# Black Configuration (Formatter - alternative to ruff format)
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# =============================================================================
# isort Configuration (Import Sorting)
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = ["migrations", ".venv", "venv"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# =============================================================================
# MyPy Configuration (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    "tests",
    "venv",
]

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "langchain.*",
    "langgraph.*",
    "qdrant_client.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "performance: Performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "coverage_html"

# =============================================================================
# Bandit Configuration (Security Linting)
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "migrations", "venv"]
skips = ["B101"]  # Skip assert_used (common in tests)

# =============================================================================
# Build System
# =============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
